[package]
name = "alice-legal"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "ALICE-Legal — Deterministic legal tree compilation, contract execution, administrative procedure events"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ext-sakamoro/ALICE-Legal"

[dependencies]

[lib]
name = "alice_legal"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = ["std"]
std = []
ffi = ["std"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
